tests/cases/fail/dict_unsupported_value_type.p4
class Point:
    x: int

def main() -> None:
    data: dict[str, Point] = {}
